swagger configurations
